--- a/webpack/package.json
+++ b/webpack/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "element-ui": "^2.7.2",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "jquery" : "^2.2.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
